examples/negative/ffi/extern_no_return_type.kai
# Negative fixture (#520 / FFI): `extern "C" fn` without a
# return type. C FFI requires an explicit kaikai return type
# (the axiom desugar carries the C return shape). Parser must
# reject.

extern "C" fn puts(s: String)

fn main() : Int / Ffi = 0
